# makimate-2026

./: .gitignore  Dockerfile  README copy.md  README.md  ros_entrypoint.sh
docker/: README_DOCKER.md  docker-compose.yml
docker/base/: Dockerfile  ros_entrypoint.sh
docker/robot/: Dockerfile
docs/: CONTRIBUTION_GUIDE.md  SETUP_LINUX.md  SETUP_MACOS.md  SETUP_WINDOWS.md
docs/Fall2025Documentation/: BOM_README.md  Drivers_Firmware_README.md  Electrical_README.md  Hardware_README.md  LLM_Hosting_README.md  Overall_README.md  ROS2_README.md  Startup_README.md  Ubuntu_README.md
env/: apt_extra.txt  asr_requirements.txt  setup_makimate_pi.sh
env/archive/: all_installed_packages.txt  (+2 more)
makimate-llm-server/: README.md  debug_server_llm.bat  start_server_llm.bat
piper_models/: en_US-john-medium.onnx.json
printfiles/: Finalized MakiMate Parts_colors.xlsx
scripts/: .run_maki_ai.sh.swp  install_respeaker_udev.sh  run_maki_ai.sh  run_maki_behavior.sh
src/core/makimate_asr/: package.xml  setup.cfg  setup.py
src/core/makimate_asr/makimate_asr/: ai_command_router.py  asr_led_node.py  calibration_workflow_node.py  natural_tts_node.py  respeaker_vosk_asr.py  simple_tts_node.py  speaker_recognition_node.py  voice_calibration_node.py
src/core/makimate_asr/makimate_asr/pixel-ring-0.1.0/pixel_ring.egg-info/: PKG-INFO
src/core/server_llm/: package.xml  setup.cfg  setup.py
src/core/server_llm/launch/: llm_bridge.launch.py
src/core/server_llm/server_llm/: llm_bridge_node.py  say.py  tty.py
system_configs/: bashrc.example  config.txt.example  install_configs.sh
(+83 files in other folders)
